Ajustes en vista mobile

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<button>Buscar</button>
 				</div>
 			</form>
-			<div class="tracking-info">
+			<div class="tracking-info active-delivery preparing">
 				<!-- --------------- Clases despacho a domicilio ---------------
 				class="tracking-info active-delivery" muestra el contenedor de la información del pedido.
 				class="tracking-info active-delivery canceled": pedido cancelado
