--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
 					<button>Buscar</button>
 				</div>
 			</form>
-			<div class="tracking-info active-delivery">
+			<div class="tracking-info active-delivery paid">
 				<!-- --------------- Clases despacho a domicilio ---------------
 				class="tracking-info active-delivery" muestra el contenedor de la información del pedido.
 				class="tracking-info active-delivery canceled": pedido cancelado
 				class="tracking-info active-delivery processing": procesando pedido
+				class="tracking-info active-delivery paid": pago aceptado
 				class="tracking-info active-delivery preparing": preparando el pedido
 				class="tracking-info active-delivery sent": pedido enviado
 				class="tracking-info active-delivery delivered": pedido entregado
@@ -48,6 +49,7 @@
 				class="tracking-info active-store" muestra el contenedor de la información del pedido.
 				class="tracking-info active-store canceled" pedido cancelado
 				class="tracking-info active-store processing" procesando pedido
+				class="tracking-info active-store paid" pago aceptado
 				class="tracking-info active-store preparing" preparando el pedido
 				class="tracking-info active-store delivered" pedido listo para retirar
 				class="tracking-info active-store delivered-ok" pedido retirado
@@ -75,6 +77,10 @@
 						<div class="status-col__circle"><i class="fas fa-times"></i></div>
 						<h3>Pedido cancelado</h3>
 					</div>
+					<div class="status-col status-col--first-paid">
+						<div class="status-col__circle"><i class="far fa-credit-card"></i></div>
+						<h3>Pago aceptado</h3>
+					</div>
 					<div class="status-col status-col--first">
 						<div class="status-col__circle"><i class="fas fa-truck-loading"></i></div>
 						<h3>Preparando el pedido</h3>
@@ -86,6 +92,10 @@
 					<div class="status-col status-col--third">
 						<div class="status-col__circle"><i class="fas fa-home"></i></div>
 						<h3>Tu pedido ha sido entregado</h3>
+					</div>
+					<div class="status-col status-col--first-store-paid">
+						<div class="status-col__circle"><i class="far fa-credit-card"></i></div>
+						<h3>Pago aceptado</h3>
 					</div>
 					<div class="status-col status-col--first-store">
 						<div class="status-col__circle"><i class="fas fa-box-open"></i></div>
